--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@thiagoprz/filter-pipe",
   "description": "Angular Filter Pipe",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "peerDependencies": {
-    "@angular/common": "^11.2.4",
-    "@angular/core": "^11.2.4"
+    "@angular/common": "^11.2.4 || ~10.0.0",
+    "@angular/core": "^11.2.4 || ~10.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
